# goldbot

./: API_ALTERNATIVES_GUIDE.md  API_STATUS_REPORT.md  CHANGED_FILES_SUMMARY.md  CHANGELOG.md  DATABASE_INFO.md  DEBIAN_12_INSTALL.sh  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOY_COMMANDS.md  DOWNLOAD_GUIDE.md  DOWNLOAD_PACKAGE_README.md  EMERGENCY_SERVER_FIX.md  FINAL_DEPLOYMENT_GUIDE.md  FINAL_GITHUB_UPDATE.md  FINAL_INSTALLATION_GUIDE.md  FINAL_INSTALL_SCRIPT.sh  GITHUB_COMMANDS.md  GITHUB_DEPLOYMENT_GUIDE.md  GITHUB_README.md  GOLDBOT_FINAL_COMPLETE_INSTALL.sh  GoldBot_Complete_Explanation.md  INSTALLATION_GUIDE.md  INSTALLATION_INSTRUCTIONS.md  INSTALL_COMMANDS.md  INSTALL_GUIDE.md  LICENSE  MT5_INTEGRATION_GUIDE.md  NO_SUDO_INSTALL_SCRIPT.sh  NO_TALIB_CONFIRMATION.md  OANDA_SETUP_GUIDE.md  PACKAGE_CONTENTS_v2.1.md  PACKAGE_INFO.md  PATCH_NOTES.md  PERMISSION_FIX_SCRIPT.sh  PRIORITY_SYSTEM.md  PRODUCTION_SETUP.md  QUICK_INSTALL_GUIDE.md  QUICK_SERVER_SETUP.sh  QUICK_SETUP.md  QUICK_START.sh  (+63 more)
attached_assets/: Pasted--venv-trader-srv9533214212-goldbot-pip-install-jdatetime-Collecting-jdatetime-Using-cached-jda-1755499683533_1755499683534.txt  Pasted--venv-trader-srv9533214212-goldbot-pip-install-jdatetime-python-main-py-Requirement-already-sat-1755519483506_1755519483507.txt  Pasted--venv-trader-srv9533214212-goldbot-python-main-py-2025-08-18-10-49-12-967-INFO-Found-MT5-d-1755501660024_1755501660025.txt  Pasted--venv-trader-srv9533214212-goldbot-python-main-py-2025-08-18-13-55-40-430-INFO-Found-MT5-d-1755512839553_1755512839554.txt  (+2 more)
client/: index.html
(+112 files in other folders)
